@@ -257,7 +257,12 @@ class nggGallery {
 			$$key = $val;
 		}
 		
-		if (file_exists (STYLESHEETPATH . "/nggallery/$template_name.php")) {
+		// hook into the render feature to allow other plugins to include templates
+		$custom_template = apply_filters( 'ngg_render_template', false, $template_name );
+		
+		if ( ( $custom_template != false ) &&  file_exists ($custom_template) ) {
+			include ( $custom_template );
+		} else if (file_exists (STYLESHEETPATH . "/nggallery/$template_name.php")) {
 			include (STYLESHEETPATH . "/nggallery/$template_name.php");
 		} else if (file_exists (NGGALLERY_ABSPATH . "/view/$template_name.php")) {
 			include (NGGALLERY_ABSPATH . "/view/$template_name.php");
